common-applications/infra-test-cluster/hk/openubmc/usercenter-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usercenter-website-service
  namespace: openubmc
spec:
  ports:
  - name: http-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: usercenter-website
  type: ClusterIP
